--- a/openshift/base-eds-template.yaml
+++ b/openshift/base-eds-template.yaml
@@ -11,7 +11,8 @@ resources:
   params:
     NAME: postgresql
     DATABASE_SIZE_STORAGE: "${DATABASE_SIZE_STORAGE}"
-- template: deployment/postgres
+- id: database
+  template: deployment/postgres
   params:
     APP_NAME: ${DATABASE_APP_NAME}
     DATABASE_SECRET_NAME: postgresql
